[metadata]
name = eth-monitor
version = 0.4.2
description = Monitor and cache transactions using match filters
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://git.defalsify.org/eth-monitor
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >=3.7
packages = 
	eth_monitor
	eth_monitor.importers
	eth_monitor.filters
	eth_monitor.runnable
	eth_monitor.mock

[options.entry_points]
console_scripts =
	eth-monitor-sync = eth_monitor.runnable.sync:main
